--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,6 +12,9 @@
       <td><%= article.title %></td>
       <td><%= article.text %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
+      <td><%= link_to 'Edit', edit_article_path(article) %></td>
     </tr>
   <% end %>
 </table>
+
+<%= link_to 'Back', controller: 'welcome' %>
