--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
   <tr>
     <th>Title</th>
     <th>Text</th>
-    <th></th>
+    <th colspan="10"></th>
   </tr>
  
   <% @articles.each do |article| %>
@@ -13,8 +13,12 @@
       <td><%= article.text %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
+      <td><%= link_to 'Destroy', article_path(article),
+      method: :delete,
+      data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
 
-<%= link_to 'Back', controller: 'welcome' %>
+| <%= link_to 'Back', controller: 'welcome' %> |
+<%= link_to 'New article', new_article_path %> |
